fix banner overlay on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -597,7 +597,7 @@ span {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0.4);
 }
 
@@ -1375,12 +1375,12 @@ h5 {
   }
 
   .home-header-grid {
-    justify-content: unset;
+    justify-content: start;
     background-position: 24%;
   }
 
   .home-header-grid img {
-    padding-top: 70px;
+    margin-top: 70px;
   }
 
   .banner-overlay {
